# ChatCoreClient

./: BuildConfig.cpp.in  BuildConfig.h  CMakeLists.txt  CREDITS.txt  QCCC.cpp  QCCC.h  QCCCError.cpp  QCCCError.h  Utils.h  main.cpp
depends/util/: CMakeLists.txt
depends/util/src/: cmdutils.cpp
gui/: CoreConnectDialog.cpp  CoreConnectDialog.h  CoreConnectDialog.ui  JoinDialog.cpp  JoinDialog.h  JoinDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Platform.h  Platform_Other.cpp  Platform_X11.cpp
logic/: BufferContentModel.cpp  BufferContentModel.h  BufferModel.cpp  BufferModel.h  ChatCoreConnection.cpp  ChatCoreConnection.h  ChatCoreModel.cpp  ChatCoreModel.h  ChatCoreTransport.cpp  ChatCoreTransport.h  JsonTransport.cpp  JsonTransport.h  QCCCJson.cpp  QCCCJson.h
resources/: QCCC.manifest  qchatcoreclient.rc
resources/qchatcoreclient/: index.theme  qccc.qrc
translations/: CMakeLists.txt
